// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Hybrid Script and Native Module > Generates documentation for both the base and derived modules if the flag is explicitly set > # Of Files Generated 1`] = `41`;

exports[`Hybrid Script and Native Module > Generates documentation for both the base and derived modules if the flag is explicitly set > msdocs/priorscriptapi/TOC.yml 1`] = `
"  - name: hybrid-module 0.x.x
    items:
    - name: hybrid-module 0.x.x
      href: hybrid-module-0xx/hybrid-module.md
  - name: hybrid-module-native 0.x.x
    items:
    - name: hybrid-module-native 0.x.x
      href: hybrid-module-native-0xx/hybrid-module-native.md
"
`;

exports[`Hybrid Script and Native Module > Generates documentation for both the base and derived modules if the flag is explicitly set > msdocs/priorscriptapi/hybrid-module-0xx/TypeAliasWithTSDocComments.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: hybrid-module-0xx.TypeAliasWithTSDocComments Type Alias
description: Contents of the hybrid-module.TypeAliasWithTSDocComments type alias (Version 0.x.x).
---
# TypeAliasWithTSDocComments Type Alias (Version 0.x.x)

> [!IMPORTANT]
> This documentation is for an older version of this module. Go to the latest documentation [*here*](../../../scriptapi/hybrid-module/TypeAliasWithTSDocComments.md).

This doc text is extracted from TSDoc comments

## Declaration
\`export type TypeAliasWithTSDocComments = boolean | string;\`
"
`;

exports[`Hybrid Script and Native Module > Generates documentation for both the base and derived modules if the flag is explicitly set > msdocs/priorscriptapi/hybrid-module-0xx/hybrid-module.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: hybrid-module-0xx Module
description: Contents of the hybrid-module module (Version 0.x.x)
---
# \`hybrid-module\` Module (Version 0.x.x)

> [!IMPORTANT]
> This documentation is for an older version of this module. Go to the latest documentation [*here*](../../../scriptapi/hybrid-module/hybrid-module.md).

## Manifest Details
\`\`\`json
{
    "module_name": "hybrid-module",
    "version": "0.1.0"
}
\`\`\`

## Available Versions
- \`0.1.0\`

# Type Aliases
- [TypeAliasWithTSDocComments](TypeAliasWithTSDocComments.md)

## Functions

### **NativeBoundFunction**
\`
NativeBoundFunction(): boolean
\`

A native bound function.

**Returns** *boolean* - A boolean value.
"
`;

exports[`Hybrid Script and Native Module > Generates documentation for both the base and derived modules if the flag is explicitly set > msdocs/priorscriptapi/hybrid-module-native-0xx/hybrid-module-native.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: hybrid-module-native-0xx Module
description: Contents of the hybrid-module-native module (Version 0.x.x)
---
# \`hybrid-module-native\` Module (Version 0.x.x)

> [!IMPORTANT]
> This documentation is for an older version of this module. Go to the latest documentation [*here*](../../../scriptapi/hybrid-module-native/hybrid-module-native.md).

## Manifest Details
\`\`\`json
{
    "module_name": "hybrid-module-native",
    "version": "0.1.0"
}
\`\`\`

## Available Versions
- \`0.1.0\`

## Functions

### **NativeBoundFunction**
\`
NativeBoundFunction(): boolean
\`

**Returns** *boolean*
"
`;

exports[`Hybrid Script and Native Module > Generates documentation for both the base and derived modules if the flag is explicitly set > msdocs/scriptapi/TOC.yml 1`] = `
"  - name: hybrid-module
    items:
    - name: hybrid-module
      href: hybrid-module/hybrid-module.md
    - name: hybrid-module Changelog
      href: hybrid-module/changelog.md
    - name: ScriptGeneratedEnum
      href: hybrid-module/ScriptGeneratedEnum.md
    - name: ScriptGeneratedClass
      href: hybrid-module/ScriptGeneratedClass.md
  - name: hybrid-module-native
    items:
    - name: hybrid-module-native
      href: hybrid-module-native/hybrid-module-native.md
    - name: hybrid-module-native Changelog
      href: hybrid-module-native/changelog.md
"
`;

exports[`Hybrid Script and Native Module > Generates documentation for both the base and derived modules if the flag is explicitly set > msdocs/scriptapi/hybrid-module/ScriptGeneratedClass.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: hybrid-module.ScriptGeneratedClass Class
description: Contents of the hybrid-module.ScriptGeneratedClass class.
---
# ScriptGeneratedClass Class

A script generated class

## Properties

### **testProperty**
\`testProperty: string | undefined;\`

A script generated property

Type: *string | undefined*

Notes:
  - This property can't be used in read-only mode.

## Methods
- [testFunctionWithTSDocComments](#testfunctionwithtsdoccomments)

### **testFunctionWithTSDocComments**
\`
testFunctionWithTSDocComments(tsdocParam: number, msdocParam: number): boolean
\`

A script generated function with doc text defined in TSDoc comments

#### **Parameters**
- **tsdocParam**: *number*
  
  Param comment from TSDoc
- **msdocParam**: *number*
  
  This overwrites the TSDoc for msdocParam with an info.json file's description

**Returns** *boolean* - This is a return comment defined in info.json
  
Notes:
- This function can't be called in read-only mode.
- This function can throw errors.
  - Throws comment in TSDocs
"
`;

exports[`Hybrid Script and Native Module > Generates documentation for both the base and derived modules if the flag is explicitly set > msdocs/scriptapi/hybrid-module/ScriptGeneratedEnum.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: hybrid-module.ScriptGeneratedEnum Enumeration
description: Contents of the hybrid-module.ScriptGeneratedEnum enumeration.
---
# ScriptGeneratedEnum Enumeration

A script generated enum

## Constants
### **BetaOnly**
\`BetaOnly = betaOnly\`
### **First**
\`First = first\`
### **Second**
\`Second = second\`
"
`;

exports[`Hybrid Script and Native Module > Generates documentation for both the base and derived modules if the flag is explicitly set > msdocs/scriptapi/hybrid-module/TypeAliasWithInfoJsonComments.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: hybrid-module.TypeAliasWithInfoJsonComments Type Alias
description: Contents of the hybrid-module.TypeAliasWithInfoJsonComments type alias.
---
# TypeAliasWithInfoJsonComments Type Alias

This overwrites the TSDoc from TypeAliasWithInfoJsonComments with an info.json file's description

## Declaration
\`export type TypeAliasWithInfoJsonComments = {
    id: string;
};\`
"
`;

exports[`Hybrid Script and Native Module > Generates documentation for both the base and derived modules if the flag is explicitly set > msdocs/scriptapi/hybrid-module/TypeAliasWithTSDocComments.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: hybrid-module.TypeAliasWithTSDocComments Type Alias
description: Contents of the hybrid-module.TypeAliasWithTSDocComments type alias.
---
# TypeAliasWithTSDocComments Type Alias

This doc text is extracted from TSDoc comments

## Declaration
\`export type TypeAliasWithTSDocComments = boolean | string;\`
"
`;

exports[`Hybrid Script and Native Module > Generates documentation for both the base and derived modules if the flag is explicitly set > msdocs/scriptapi/hybrid-module/changelog.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: hybrid-module Changelog
description: Changelog of the \`hybrid-module\` module
---
# \`hybrid-module\` Changelog

## Version Changes
- [1.1.0-beta](#110-beta)
- [1.0.0](#100)
- [0.1.0](#010)

## 1.1.0-beta
#### Added function \`NativeBoundFunction_Beta\`
#### Changed enum [\`ScriptGeneratedEnum\`](ScriptGeneratedEnum.md)
- Added value \`BetaOnly\`
## 1.0.0
#### Added *[\`ScriptGeneratedClass\`](ScriptGeneratedClass.md)*
#### Added enum [\`ScriptGeneratedEnum\`](ScriptGeneratedEnum.md)
## 0.1.0
#### Added \`hybrid-module\` Module
"
`;

exports[`Hybrid Script and Native Module > Generates documentation for both the base and derived modules if the flag is explicitly set > msdocs/scriptapi/hybrid-module/hybrid-module.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: hybrid-module Module
description: Contents of the hybrid-module module
---
# \`hybrid-module\` Module

## [Changelog](changelog.md)

## Manifest Details
\`\`\`json
{
    "module_name": "hybrid-module",
    "version": "1.0.0"
}
\`\`\`
This is version 1.x.x of this module, which is the latest as of version 1.0.0 of Minecraft.

## Available Versions
- \`1.1.0-beta\`
- \`1.0.0\`

## Enumerations
- [ScriptGeneratedEnum](ScriptGeneratedEnum.md)

# Type Aliases
- [TypeAliasWithInfoJsonComments](TypeAliasWithInfoJsonComments.md)
- [TypeAliasWithTSDocComments](TypeAliasWithTSDocComments.md)

## Classes
- [ScriptGeneratedClass](ScriptGeneratedClass.md)

## Functions

### **NativeBoundFunction**
\`
NativeBoundFunction(): boolean
\`

A native bound function.

**Returns** *boolean* - A boolean value.

::: moniker range="=minecraft-bedrock-experimental"
### **NativeBoundFunction_Beta**
\`
NativeBoundFunction_Beta(): boolean
\`

**Returns** *boolean*

> [!CAUTION]
> This function is still in pre-release.  Its signature may change or it may be removed in future releases.
::: moniker-end
"
`;

exports[`Hybrid Script and Native Module > Generates documentation for both the base and derived modules if the flag is explicitly set > msdocs/scriptapi/hybrid-module-native/changelog.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: hybrid-module-native Changelog
description: Changelog of the \`hybrid-module-native\` module
---
# \`hybrid-module-native\` Changelog

## Version Changes
- [1.1.0-internal](#110-internal)
- [1.1.0-beta](#110-beta)
- [1.0.0](#100)
- [0.1.0](#010)

## 1.1.0-internal
#### Changed function \`NativeBoundFunction_Beta\`
- Changed return type from *boolean* to *string*
#### Added function \`NativeBoundFunction_InternalOnly\`
## 1.1.0-beta
#### Added function \`NativeBoundFunction_Beta\`
## 1.0.0
## 0.1.0
#### Added \`hybrid-module-native\` Module
"
`;

exports[`Hybrid Script and Native Module > Generates documentation for both the base and derived modules if the flag is explicitly set > msdocs/scriptapi/hybrid-module-native/hybrid-module-native.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: hybrid-module-native Module
description: Contents of the hybrid-module-native module
---
# \`hybrid-module-native\` Module

## [Changelog](changelog.md)

## Manifest Details
\`\`\`json
{
    "module_name": "hybrid-module-native",
    "version": "1.0.0"
}
\`\`\`
This is version 1.x.x of this module, which is the latest as of version 1.0.0 of Minecraft.

## Available Versions
- \`1.1.0-internal\`
- \`1.1.0-beta\`
- \`1.0.0\`

## Functions

### **NativeBoundFunction**
\`
NativeBoundFunction(): boolean
\`

**Returns** *boolean*

::: moniker range="=minecraft-bedrock-experimental"
### **NativeBoundFunction_Beta**
\`
NativeBoundFunction_Beta(): string
\`

**Returns** *string*

> [!CAUTION]
> This function is still in pre-release.  Its signature may change or it may be removed in future releases.
::: moniker-end

::: moniker range="=minecraft-bedrock-experimental"
### **NativeBoundFunction_InternalOnly**
\`
NativeBoundFunction_InternalOnly(): string
\`

**Returns** *string*

> [!CAUTION]
> This function is still in pre-release.  Its signature may change or it may be removed in future releases.
::: moniker-end
"
`;

exports[`Hybrid Script and Native Module > Generates documentation for both the base and derived modules if the flag is explicitly set > npm/types/hybrid-module@0.1.0/README.md 1`] = `
"# \`hybrid-module\`

See full documentation for this module here:

https://learn.microsoft.com/en-us/minecraft/creator/priorscriptapi/hybrid-module-0xx/hybrid-module"
`;

exports[`Hybrid Script and Native Module > Generates documentation for both the base and derived modules if the flag is explicitly set > npm/types/hybrid-module@0.1.0/index.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "hybrid-module",
 *   "version": "0.1.0"
 * }
 * \`\`\`
 *
 */
/**
 * This doc text is extracted from TSDoc comments
 */
export type TypeAliasWithTSDocComments = boolean | string;

/**
 * @remarks
 * A native bound function.
 *
 * @returns
 * A boolean value.
 */
export function NativeBoundFunction(): boolean;
"
`;

exports[`Hybrid Script and Native Module > Generates documentation for both the base and derived modules if the flag is explicitly set > npm/types/hybrid-module@0.1.0/package.json 1`] = `
"{
  "name": "hybrid-module",
  "version": "0.1.0",
  "description": "",
  "contributors": [
    {
      "name": "Jake Shirley",
      "email": "jake@xbox.com"
    },
    {
      "name": "Mike Ammerlaan",
      "email": "mikeam@microsoft.com"
    }
  ],
  "license": "MIT"
}"
`;

exports[`Hybrid Script and Native Module > Generates documentation for both the base and derived modules if the flag is explicitly set > npm/types/hybrid-module@1.0.0/README.md 1`] = `
"# \`hybrid-module\`

See full documentation for this module here:

https://learn.microsoft.com/en-us/minecraft/creator/scriptapi/hybrid-module/hybrid-module"
`;

exports[`Hybrid Script and Native Module > Generates documentation for both the base and derived modules if the flag is explicitly set > npm/types/hybrid-module@1.0.0/index.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "hybrid-module",
 *   "version": "1.0.0"
 * }
 * \`\`\`
 *
 */
/**
 * A script generated enum
 */
export declare enum ScriptGeneratedEnum {
    First = 'first',
    Second = 'second',
}

/**
 * This overwrites the TSDoc from TypeAliasWithInfoJsonComments
 * with an info.json file's description
 */
export type TypeAliasWithInfoJsonComments = {
    id: string;
};

/**
 * This doc text is extracted from TSDoc comments
 */
export type TypeAliasWithTSDocComments = boolean | string;

/**
 * A script generated class
 */
export declare class ScriptGeneratedClass {
    /**
     * @remarks
     * A script generated property
     *
     * This property can't be used in read-only mode.
     *
     */
    testProperty: string | undefined;
    /**
     * @remarks
     * A script generated function with doc text defined in TSDoc
     * comments
     *
     * This function can't be called in read-only mode.
     *
     * @param tsdocParam
     * Param comment from TSDoc
     * @param msdocParam
     * This overwrites the TSDoc for msdocParam with an info.json
     * file's description
     * @returns
     * This is a return comment defined in info.json
     * @throws
     * Throws comment in TSDocs
     */
    testFunctionWithTSDocComments(tsdocParam: number, msdocParam: number): boolean;
}

/**
 * @remarks
 * A native bound function.
 *
 * @returns
 * A boolean value.
 */
export function NativeBoundFunction(): boolean;
"
`;

exports[`Hybrid Script and Native Module > Generates documentation for both the base and derived modules if the flag is explicitly set > npm/types/hybrid-module@1.0.0/package.json 1`] = `
"{
  "name": "hybrid-module",
  "version": "1.0.0",
  "description": "",
  "contributors": [
    {
      "name": "Jake Shirley",
      "email": "jake@xbox.com"
    },
    {
      "name": "Mike Ammerlaan",
      "email": "mikeam@microsoft.com"
    }
  ],
  "license": "MIT"
}"
`;

exports[`Hybrid Script and Native Module > Generates documentation for both the base and derived modules if the flag is explicitly set > npm/types/hybrid-module@1.1.0-beta/README.md 1`] = `
"# \`hybrid-module\`

## **NOTE: This version of this module is still in pre-release.  It may change or it may be removed in future releases.**

See full documentation for this module here:

https://learn.microsoft.com/en-us/minecraft/creator/scriptapi/hybrid-module/hybrid-module"
`;

exports[`Hybrid Script and Native Module > Generates documentation for both the base and derived modules if the flag is explicitly set > npm/types/hybrid-module@1.1.0-beta/index.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @beta
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "hybrid-module",
 *   "version": "1.1.0-beta"
 * }
 * \`\`\`
 *
 */
/**
 * A script generated enum
 */
export declare enum ScriptGeneratedEnum {
    /**
     * @beta
     */
    BetaOnly = 'betaOnly',
    First = 'first',
    Second = 'second',
}

/**
 * This overwrites the TSDoc from TypeAliasWithInfoJsonComments
 * with an info.json file's description
 */
export type TypeAliasWithInfoJsonComments = {
    id: string;
};

/**
 * This doc text is extracted from TSDoc comments
 */
export type TypeAliasWithTSDocComments = boolean | string;

/**
 * A script generated class
 */
export declare class ScriptGeneratedClass {
    /**
     * @remarks
     * A script generated property
     *
     * This property can't be used in read-only mode.
     *
     */
    testProperty: string | undefined;
    /**
     * @remarks
     * A script generated function with doc text defined in TSDoc
     * comments
     *
     * This function can't be called in read-only mode.
     *
     * @param tsdocParam
     * Param comment from TSDoc
     * @param msdocParam
     * This overwrites the TSDoc for msdocParam with an info.json
     * file's description
     * @returns
     * This is a return comment defined in info.json
     * @throws
     * Throws comment in TSDocs
     */
    testFunctionWithTSDocComments(tsdocParam: number, msdocParam: number): boolean;
}

/**
 * @remarks
 * A native bound function.
 *
 * @returns
 * A boolean value.
 */
export function NativeBoundFunction(): boolean;
/**
 * @beta
 */
export function NativeBoundFunction_Beta(): boolean;
"
`;

exports[`Hybrid Script and Native Module > Generates documentation for both the base and derived modules if the flag is explicitly set > npm/types/hybrid-module@1.1.0-beta/package.json 1`] = `
"{
  "name": "hybrid-module",
  "version": "1.1.0-beta",
  "description": "",
  "contributors": [
    {
      "name": "Jake Shirley",
      "email": "jake@xbox.com"
    },
    {
      "name": "Mike Ammerlaan",
      "email": "mikeam@microsoft.com"
    }
  ],
  "license": "MIT"
}"
`;

exports[`Hybrid Script and Native Module > Generates documentation for both the base and derived modules if the flag is explicitly set > npm/types/hybrid-module-native@0.1.0/README.md 1`] = `
"# \`hybrid-module-native\`

See full documentation for this module here:

https://learn.microsoft.com/en-us/minecraft/creator/priorscriptapi/hybrid-module-native-0xx/hybrid-module-native"
`;

exports[`Hybrid Script and Native Module > Generates documentation for both the base and derived modules if the flag is explicitly set > npm/types/hybrid-module-native@0.1.0/index.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "hybrid-module-native",
 *   "version": "0.1.0"
 * }
 * \`\`\`
 *
 */
export function NativeBoundFunction(): boolean;
"
`;

exports[`Hybrid Script and Native Module > Generates documentation for both the base and derived modules if the flag is explicitly set > npm/types/hybrid-module-native@0.1.0/package.json 1`] = `
"{
  "name": "hybrid-module-native",
  "version": "0.1.0",
  "description": "",
  "contributors": [
    {
      "name": "Jake Shirley",
      "email": "jake@xbox.com"
    },
    {
      "name": "Mike Ammerlaan",
      "email": "mikeam@microsoft.com"
    }
  ],
  "license": "MIT"
}"
`;

exports[`Hybrid Script and Native Module > Generates documentation for both the base and derived modules if the flag is explicitly set > npm/types/hybrid-module-native@1.0.0/README.md 1`] = `
"# \`hybrid-module-native\`

See full documentation for this module here:

https://learn.microsoft.com/en-us/minecraft/creator/scriptapi/hybrid-module-native/hybrid-module-native"
`;

exports[`Hybrid Script and Native Module > Generates documentation for both the base and derived modules if the flag is explicitly set > npm/types/hybrid-module-native@1.0.0/index.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "hybrid-module-native",
 *   "version": "1.0.0"
 * }
 * \`\`\`
 *
 */
export function NativeBoundFunction(): boolean;
"
`;

exports[`Hybrid Script and Native Module > Generates documentation for both the base and derived modules if the flag is explicitly set > npm/types/hybrid-module-native@1.0.0/package.json 1`] = `
"{
  "name": "hybrid-module-native",
  "version": "1.0.0",
  "description": "",
  "contributors": [
    {
      "name": "Jake Shirley",
      "email": "jake@xbox.com"
    },
    {
      "name": "Mike Ammerlaan",
      "email": "mikeam@microsoft.com"
    }
  ],
  "license": "MIT"
}"
`;

exports[`Hybrid Script and Native Module > Generates documentation for both the base and derived modules if the flag is explicitly set > npm/types/hybrid-module-native@1.1.0-beta/README.md 1`] = `
"# \`hybrid-module-native\`

## **NOTE: This version of this module is still in pre-release.  It may change or it may be removed in future releases.**

See full documentation for this module here:

https://learn.microsoft.com/en-us/minecraft/creator/scriptapi/hybrid-module-native/hybrid-module-native"
`;

exports[`Hybrid Script and Native Module > Generates documentation for both the base and derived modules if the flag is explicitly set > npm/types/hybrid-module-native@1.1.0-beta/index.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @beta
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "hybrid-module-native",
 *   "version": "1.1.0-beta"
 * }
 * \`\`\`
 *
 */
export function NativeBoundFunction(): boolean;
/**
 * @beta
 */
export function NativeBoundFunction_Beta(): boolean;
"
`;

exports[`Hybrid Script and Native Module > Generates documentation for both the base and derived modules if the flag is explicitly set > npm/types/hybrid-module-native@1.1.0-beta/package.json 1`] = `
"{
  "name": "hybrid-module-native",
  "version": "1.1.0-beta",
  "description": "",
  "contributors": [
    {
      "name": "Jake Shirley",
      "email": "jake@xbox.com"
    },
    {
      "name": "Mike Ammerlaan",
      "email": "mikeam@microsoft.com"
    }
  ],
  "license": "MIT"
}"
`;

exports[`Hybrid Script and Native Module > Generates documentation for both the base and derived modules if the flag is explicitly set > npm/types/hybrid-module-native@1.1.0-internal/README.md 1`] = `
"# \`hybrid-module-native\`

## **NOTE: This version of this module is still in pre-release.  It may change or it may be removed in future releases.**

See full documentation for this module here:

https://learn.microsoft.com/en-us/minecraft/creator/scriptapi/hybrid-module-native/hybrid-module-native"
`;

exports[`Hybrid Script and Native Module > Generates documentation for both the base and derived modules if the flag is explicitly set > npm/types/hybrid-module-native@1.1.0-internal/index.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @internal
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "hybrid-module-native",
 *   "version": "1.1.0-internal"
 * }
 * \`\`\`
 *
 */
export function NativeBoundFunction(): boolean;
/**
 * @beta
 */
export function NativeBoundFunction_Beta(): string;
/**
 * @internal
 */
export function NativeBoundFunction_InternalOnly(): string;
"
`;

exports[`Hybrid Script and Native Module > Generates documentation for both the base and derived modules if the flag is explicitly set > npm/types/hybrid-module-native@1.1.0-internal/package.json 1`] = `
"{
  "name": "hybrid-module-native",
  "version": "1.1.0-internal",
  "description": "",
  "contributors": [
    {
      "name": "Jake Shirley",
      "email": "jake@xbox.com"
    },
    {
      "name": "Mike Ammerlaan",
      "email": "mikeam@microsoft.com"
    }
  ],
  "license": "MIT"
}"
`;

exports[`Hybrid Script and Native Module > Generates documentation for both the base and derived modules if the flag is explicitly set > typescript/hybrid-module@0.1.0.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "hybrid-module",
 *   "version": "0.1.0"
 * }
 * \`\`\`
 *
 */
/**
 * This doc text is extracted from TSDoc comments
 */
export type TypeAliasWithTSDocComments = boolean | string;

/**
 * @remarks
 * A native bound function.
 *
 * @returns
 * A boolean value.
 */
export function NativeBoundFunction(): boolean;
"
`;

exports[`Hybrid Script and Native Module > Generates documentation for both the base and derived modules if the flag is explicitly set > typescript/hybrid-module@1.0.0.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "hybrid-module",
 *   "version": "1.0.0"
 * }
 * \`\`\`
 *
 */
/**
 * A script generated enum
 */
export declare enum ScriptGeneratedEnum {
    First = 'first',
    Second = 'second',
}

/**
 * This overwrites the TSDoc from TypeAliasWithInfoJsonComments
 * with an info.json file's description
 */
export type TypeAliasWithInfoJsonComments = {
    id: string;
};

/**
 * This doc text is extracted from TSDoc comments
 */
export type TypeAliasWithTSDocComments = boolean | string;

/**
 * A script generated class
 */
export declare class ScriptGeneratedClass {
    /**
     * @remarks
     * A script generated property
     *
     * This property can't be used in read-only mode.
     *
     */
    testProperty: string | undefined;
    /**
     * @remarks
     * A script generated function with doc text defined in TSDoc
     * comments
     *
     * This function can't be called in read-only mode.
     *
     * @param tsdocParam
     * Param comment from TSDoc
     * @param msdocParam
     * This overwrites the TSDoc for msdocParam with an info.json
     * file's description
     * @returns
     * This is a return comment defined in info.json
     * @throws
     * Throws comment in TSDocs
     */
    testFunctionWithTSDocComments(tsdocParam: number, msdocParam: number): boolean;
}

/**
 * @remarks
 * A native bound function.
 *
 * @returns
 * A boolean value.
 */
export function NativeBoundFunction(): boolean;
"
`;

exports[`Hybrid Script and Native Module > Generates documentation for both the base and derived modules if the flag is explicitly set > typescript/hybrid-module@1.1.0-beta.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @beta
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "hybrid-module",
 *   "version": "1.1.0-beta"
 * }
 * \`\`\`
 *
 */
/**
 * A script generated enum
 */
export declare enum ScriptGeneratedEnum {
    /**
     * @beta
     */
    BetaOnly = 'betaOnly',
    First = 'first',
    Second = 'second',
}

/**
 * This overwrites the TSDoc from TypeAliasWithInfoJsonComments
 * with an info.json file's description
 */
export type TypeAliasWithInfoJsonComments = {
    id: string;
};

/**
 * This doc text is extracted from TSDoc comments
 */
export type TypeAliasWithTSDocComments = boolean | string;

/**
 * A script generated class
 */
export declare class ScriptGeneratedClass {
    /**
     * @remarks
     * A script generated property
     *
     * This property can't be used in read-only mode.
     *
     */
    testProperty: string | undefined;
    /**
     * @remarks
     * A script generated function with doc text defined in TSDoc
     * comments
     *
     * This function can't be called in read-only mode.
     *
     * @param tsdocParam
     * Param comment from TSDoc
     * @param msdocParam
     * This overwrites the TSDoc for msdocParam with an info.json
     * file's description
     * @returns
     * This is a return comment defined in info.json
     * @throws
     * Throws comment in TSDocs
     */
    testFunctionWithTSDocComments(tsdocParam: number, msdocParam: number): boolean;
}

/**
 * @remarks
 * A native bound function.
 *
 * @returns
 * A boolean value.
 */
export function NativeBoundFunction(): boolean;
/**
 * @beta
 */
export function NativeBoundFunction_Beta(): boolean;
"
`;

exports[`Hybrid Script and Native Module > Generates documentation for both the base and derived modules if the flag is explicitly set > typescript/hybrid-module-native@0.1.0.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "hybrid-module-native",
 *   "version": "0.1.0"
 * }
 * \`\`\`
 *
 */
export function NativeBoundFunction(): boolean;
"
`;

exports[`Hybrid Script and Native Module > Generates documentation for both the base and derived modules if the flag is explicitly set > typescript/hybrid-module-native@1.0.0.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "hybrid-module-native",
 *   "version": "1.0.0"
 * }
 * \`\`\`
 *
 */
export function NativeBoundFunction(): boolean;
"
`;

exports[`Hybrid Script and Native Module > Generates documentation for both the base and derived modules if the flag is explicitly set > typescript/hybrid-module-native@1.1.0-beta.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @beta
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "hybrid-module-native",
 *   "version": "1.1.0-beta"
 * }
 * \`\`\`
 *
 */
export function NativeBoundFunction(): boolean;
/**
 * @beta
 */
export function NativeBoundFunction_Beta(): boolean;
"
`;

exports[`Hybrid Script and Native Module > Generates documentation for both the base and derived modules if the flag is explicitly set > typescript/hybrid-module-native@1.1.0-internal.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @internal
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "hybrid-module-native",
 *   "version": "1.1.0-internal"
 * }
 * \`\`\`
 *
 */
export function NativeBoundFunction(): boolean;
/**
 * @beta
 */
export function NativeBoundFunction_Beta(): string;
/**
 * @internal
 */
export function NativeBoundFunction_InternalOnly(): string;
"
`;

exports[`Hybrid Script and Native Module > Properly generates documentation for modules generated from a hybrid of script and native bindings > # Of Files Generated 1`] = `28`;

exports[`Hybrid Script and Native Module > Properly generates documentation for modules generated from a hybrid of script and native bindings > msdocs/priorscriptapi/TOC.yml 1`] = `
"  - name: hybrid-module 0.x.x
    items:
    - name: hybrid-module 0.x.x
      href: hybrid-module-0xx/hybrid-module.md
"
`;

exports[`Hybrid Script and Native Module > Properly generates documentation for modules generated from a hybrid of script and native bindings > msdocs/priorscriptapi/hybrid-module-0xx/TypeAliasWithTSDocComments.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: hybrid-module-0xx.TypeAliasWithTSDocComments Type Alias
description: Contents of the hybrid-module.TypeAliasWithTSDocComments type alias (Version 0.x.x).
---
# TypeAliasWithTSDocComments Type Alias (Version 0.x.x)

> [!IMPORTANT]
> This documentation is for an older version of this module. Go to the latest documentation [*here*](../../../scriptapi/hybrid-module/TypeAliasWithTSDocComments.md).

This doc text is extracted from TSDoc comments

## Declaration
\`export type TypeAliasWithTSDocComments = boolean | string;\`
"
`;

exports[`Hybrid Script and Native Module > Properly generates documentation for modules generated from a hybrid of script and native bindings > msdocs/priorscriptapi/hybrid-module-0xx/hybrid-module.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: hybrid-module-0xx Module
description: Contents of the hybrid-module module (Version 0.x.x)
---
# \`hybrid-module\` Module (Version 0.x.x)

> [!IMPORTANT]
> This documentation is for an older version of this module. Go to the latest documentation [*here*](../../../scriptapi/hybrid-module/hybrid-module.md).

## Manifest Details
\`\`\`json
{
    "module_name": "hybrid-module",
    "version": "0.1.0"
}
\`\`\`

## Available Versions
- \`0.1.0\`

# Type Aliases
- [TypeAliasWithTSDocComments](TypeAliasWithTSDocComments.md)

## Functions

### **NativeBoundFunction**
\`
NativeBoundFunction(): boolean
\`

A native bound function.

**Returns** *boolean* - A boolean value.
"
`;

exports[`Hybrid Script and Native Module > Properly generates documentation for modules generated from a hybrid of script and native bindings > msdocs/scriptapi/TOC.yml 1`] = `
"  - name: hybrid-module
    items:
    - name: hybrid-module
      href: hybrid-module/hybrid-module.md
    - name: hybrid-module Changelog
      href: hybrid-module/changelog.md
    - name: ScriptGeneratedEnum
      href: hybrid-module/ScriptGeneratedEnum.md
    - name: ScriptGeneratedClass
      href: hybrid-module/ScriptGeneratedClass.md
  - name: hybrid-module-native
    items:
    - name: hybrid-module-native
      href: hybrid-module-native/hybrid-module-native.md
    - name: hybrid-module-native Changelog
      href: hybrid-module-native/changelog.md
"
`;

exports[`Hybrid Script and Native Module > Properly generates documentation for modules generated from a hybrid of script and native bindings > msdocs/scriptapi/hybrid-module/ScriptGeneratedClass.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: hybrid-module.ScriptGeneratedClass Class
description: Contents of the hybrid-module.ScriptGeneratedClass class.
---
# ScriptGeneratedClass Class

A script generated class

## Properties

### **testProperty**
\`testProperty: string | undefined;\`

A script generated property

Type: *string | undefined*

Notes:
  - This property can't be used in read-only mode.

## Methods
- [testFunctionWithTSDocComments](#testfunctionwithtsdoccomments)

### **testFunctionWithTSDocComments**
\`
testFunctionWithTSDocComments(tsdocParam: number, msdocParam: number): boolean
\`

A script generated function with doc text defined in TSDoc comments

#### **Parameters**
- **tsdocParam**: *number*
  
  Param comment from TSDoc
- **msdocParam**: *number*
  
  This overwrites the TSDoc for msdocParam with an info.json file's description

**Returns** *boolean* - This is a return comment defined in info.json
  
Notes:
- This function can't be called in read-only mode.
- This function can throw errors.
  - Throws comment in TSDocs
"
`;

exports[`Hybrid Script and Native Module > Properly generates documentation for modules generated from a hybrid of script and native bindings > msdocs/scriptapi/hybrid-module/ScriptGeneratedEnum.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: hybrid-module.ScriptGeneratedEnum Enumeration
description: Contents of the hybrid-module.ScriptGeneratedEnum enumeration.
---
# ScriptGeneratedEnum Enumeration

A script generated enum

## Constants
### **BetaOnly**
\`BetaOnly = betaOnly\`
### **First**
\`First = first\`
### **Second**
\`Second = second\`
"
`;

exports[`Hybrid Script and Native Module > Properly generates documentation for modules generated from a hybrid of script and native bindings > msdocs/scriptapi/hybrid-module/TypeAliasWithInfoJsonComments.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: hybrid-module.TypeAliasWithInfoJsonComments Type Alias
description: Contents of the hybrid-module.TypeAliasWithInfoJsonComments type alias.
---
# TypeAliasWithInfoJsonComments Type Alias

This overwrites the TSDoc from TypeAliasWithInfoJsonComments with an info.json file's description

## Declaration
\`export type TypeAliasWithInfoJsonComments = {
    id: string;
};\`
"
`;

exports[`Hybrid Script and Native Module > Properly generates documentation for modules generated from a hybrid of script and native bindings > msdocs/scriptapi/hybrid-module/TypeAliasWithTSDocComments.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: hybrid-module.TypeAliasWithTSDocComments Type Alias
description: Contents of the hybrid-module.TypeAliasWithTSDocComments type alias.
---
# TypeAliasWithTSDocComments Type Alias

This doc text is extracted from TSDoc comments

## Declaration
\`export type TypeAliasWithTSDocComments = boolean | string;\`
"
`;

exports[`Hybrid Script and Native Module > Properly generates documentation for modules generated from a hybrid of script and native bindings > msdocs/scriptapi/hybrid-module/changelog.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: hybrid-module Changelog
description: Changelog of the \`hybrid-module\` module
---
# \`hybrid-module\` Changelog

## Version Changes
- [1.1.0-beta](#110-beta)
- [1.0.0](#100)
- [0.1.0](#010)

## 1.1.0-beta
#### Added function \`NativeBoundFunction_Beta\`
#### Changed enum [\`ScriptGeneratedEnum\`](ScriptGeneratedEnum.md)
- Added value \`BetaOnly\`
## 1.0.0
#### Added *[\`ScriptGeneratedClass\`](ScriptGeneratedClass.md)*
#### Added enum [\`ScriptGeneratedEnum\`](ScriptGeneratedEnum.md)
## 0.1.0
#### Added \`hybrid-module\` Module
"
`;

exports[`Hybrid Script and Native Module > Properly generates documentation for modules generated from a hybrid of script and native bindings > msdocs/scriptapi/hybrid-module/hybrid-module.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: hybrid-module Module
description: Contents of the hybrid-module module
---
# \`hybrid-module\` Module

## [Changelog](changelog.md)

## Manifest Details
\`\`\`json
{
    "module_name": "hybrid-module",
    "version": "1.0.0"
}
\`\`\`
This is version 1.x.x of this module, which is the latest as of version 1.0.0 of Minecraft.

## Available Versions
- \`1.1.0-beta\`
- \`1.0.0\`

## Enumerations
- [ScriptGeneratedEnum](ScriptGeneratedEnum.md)

# Type Aliases
- [TypeAliasWithInfoJsonComments](TypeAliasWithInfoJsonComments.md)
- [TypeAliasWithTSDocComments](TypeAliasWithTSDocComments.md)

## Classes
- [ScriptGeneratedClass](ScriptGeneratedClass.md)

## Functions

### **NativeBoundFunction**
\`
NativeBoundFunction(): boolean
\`

A native bound function.

**Returns** *boolean* - A boolean value.

::: moniker range="=minecraft-bedrock-experimental"
### **NativeBoundFunction_Beta**
\`
NativeBoundFunction_Beta(): boolean
\`

**Returns** *boolean*

> [!CAUTION]
> This function is still in pre-release.  Its signature may change or it may be removed in future releases.
::: moniker-end
"
`;

exports[`Hybrid Script and Native Module > Properly generates documentation for modules generated from a hybrid of script and native bindings > msdocs/scriptapi/hybrid-module-native/changelog.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: hybrid-module-native Changelog
description: Changelog of the \`hybrid-module-native\` module
---
# \`hybrid-module-native\` Changelog

## Version Changes
- [1.1.0-internal](#110-internal)

## 1.1.0-internal
#### Added \`hybrid-module-native\` Module
"
`;

exports[`Hybrid Script and Native Module > Properly generates documentation for modules generated from a hybrid of script and native bindings > msdocs/scriptapi/hybrid-module-native/hybrid-module-native.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: hybrid-module-native Module
description: Contents of the hybrid-module-native module
monikerRange: "=minecraft-bedrock-experimental"
---
# \`hybrid-module-native\` Module

> [!CAUTION]
> This module is still in pre-release.  It may change or it may be removed in future releases.

## [Changelog](changelog.md)

## Manifest Details
\`\`\`json
{
    "module_name": "hybrid-module-native",
    "version": "1.1.0-internal"
}
\`\`\`
This is version 1.x.x of this module, which is the latest as of version 1.0.0 of Minecraft.

## Available Versions
- \`1.1.0-internal\`

## Functions

### **NativeBoundFunction**
\`
NativeBoundFunction(): boolean
\`

**Returns** *boolean*

### **NativeBoundFunction_Beta**
\`
NativeBoundFunction_Beta(): string
\`

**Returns** *string*

### **NativeBoundFunction_InternalOnly**
\`
NativeBoundFunction_InternalOnly(): string
\`

**Returns** *string*
"
`;

exports[`Hybrid Script and Native Module > Properly generates documentation for modules generated from a hybrid of script and native bindings > npm/types/hybrid-module@0.1.0/README.md 1`] = `
"# \`hybrid-module\`

See full documentation for this module here:

https://learn.microsoft.com/en-us/minecraft/creator/priorscriptapi/hybrid-module-0xx/hybrid-module"
`;

exports[`Hybrid Script and Native Module > Properly generates documentation for modules generated from a hybrid of script and native bindings > npm/types/hybrid-module@0.1.0/index.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "hybrid-module",
 *   "version": "0.1.0"
 * }
 * \`\`\`
 *
 */
/**
 * This doc text is extracted from TSDoc comments
 */
export type TypeAliasWithTSDocComments = boolean | string;

/**
 * @remarks
 * A native bound function.
 *
 * @returns
 * A boolean value.
 */
export function NativeBoundFunction(): boolean;
"
`;

exports[`Hybrid Script and Native Module > Properly generates documentation for modules generated from a hybrid of script and native bindings > npm/types/hybrid-module@0.1.0/package.json 1`] = `
"{
  "name": "hybrid-module",
  "version": "0.1.0",
  "description": "",
  "contributors": [
    {
      "name": "Jake Shirley",
      "email": "jake@xbox.com"
    },
    {
      "name": "Mike Ammerlaan",
      "email": "mikeam@microsoft.com"
    }
  ],
  "license": "MIT"
}"
`;

exports[`Hybrid Script and Native Module > Properly generates documentation for modules generated from a hybrid of script and native bindings > npm/types/hybrid-module@1.0.0/README.md 1`] = `
"# \`hybrid-module\`

See full documentation for this module here:

https://learn.microsoft.com/en-us/minecraft/creator/scriptapi/hybrid-module/hybrid-module"
`;

exports[`Hybrid Script and Native Module > Properly generates documentation for modules generated from a hybrid of script and native bindings > npm/types/hybrid-module@1.0.0/index.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "hybrid-module",
 *   "version": "1.0.0"
 * }
 * \`\`\`
 *
 */
/**
 * A script generated enum
 */
export declare enum ScriptGeneratedEnum {
    First = 'first',
    Second = 'second',
}

/**
 * This overwrites the TSDoc from TypeAliasWithInfoJsonComments
 * with an info.json file's description
 */
export type TypeAliasWithInfoJsonComments = {
    id: string;
};

/**
 * This doc text is extracted from TSDoc comments
 */
export type TypeAliasWithTSDocComments = boolean | string;

/**
 * A script generated class
 */
export declare class ScriptGeneratedClass {
    /**
     * @remarks
     * A script generated property
     *
     * This property can't be used in read-only mode.
     *
     */
    testProperty: string | undefined;
    /**
     * @remarks
     * A script generated function with doc text defined in TSDoc
     * comments
     *
     * This function can't be called in read-only mode.
     *
     * @param tsdocParam
     * Param comment from TSDoc
     * @param msdocParam
     * This overwrites the TSDoc for msdocParam with an info.json
     * file's description
     * @returns
     * This is a return comment defined in info.json
     * @throws
     * Throws comment in TSDocs
     */
    testFunctionWithTSDocComments(tsdocParam: number, msdocParam: number): boolean;
}

/**
 * @remarks
 * A native bound function.
 *
 * @returns
 * A boolean value.
 */
export function NativeBoundFunction(): boolean;
"
`;

exports[`Hybrid Script and Native Module > Properly generates documentation for modules generated from a hybrid of script and native bindings > npm/types/hybrid-module@1.0.0/package.json 1`] = `
"{
  "name": "hybrid-module",
  "version": "1.0.0",
  "description": "",
  "contributors": [
    {
      "name": "Jake Shirley",
      "email": "jake@xbox.com"
    },
    {
      "name": "Mike Ammerlaan",
      "email": "mikeam@microsoft.com"
    }
  ],
  "license": "MIT"
}"
`;

exports[`Hybrid Script and Native Module > Properly generates documentation for modules generated from a hybrid of script and native bindings > npm/types/hybrid-module@1.1.0-beta/README.md 1`] = `
"# \`hybrid-module\`

## **NOTE: This version of this module is still in pre-release.  It may change or it may be removed in future releases.**

See full documentation for this module here:

https://learn.microsoft.com/en-us/minecraft/creator/scriptapi/hybrid-module/hybrid-module"
`;

exports[`Hybrid Script and Native Module > Properly generates documentation for modules generated from a hybrid of script and native bindings > npm/types/hybrid-module@1.1.0-beta/index.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @beta
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "hybrid-module",
 *   "version": "1.1.0-beta"
 * }
 * \`\`\`
 *
 */
/**
 * A script generated enum
 */
export declare enum ScriptGeneratedEnum {
    /**
     * @beta
     */
    BetaOnly = 'betaOnly',
    First = 'first',
    Second = 'second',
}

/**
 * This overwrites the TSDoc from TypeAliasWithInfoJsonComments
 * with an info.json file's description
 */
export type TypeAliasWithInfoJsonComments = {
    id: string;
};

/**
 * This doc text is extracted from TSDoc comments
 */
export type TypeAliasWithTSDocComments = boolean | string;

/**
 * A script generated class
 */
export declare class ScriptGeneratedClass {
    /**
     * @remarks
     * A script generated property
     *
     * This property can't be used in read-only mode.
     *
     */
    testProperty: string | undefined;
    /**
     * @remarks
     * A script generated function with doc text defined in TSDoc
     * comments
     *
     * This function can't be called in read-only mode.
     *
     * @param tsdocParam
     * Param comment from TSDoc
     * @param msdocParam
     * This overwrites the TSDoc for msdocParam with an info.json
     * file's description
     * @returns
     * This is a return comment defined in info.json
     * @throws
     * Throws comment in TSDocs
     */
    testFunctionWithTSDocComments(tsdocParam: number, msdocParam: number): boolean;
}

/**
 * @remarks
 * A native bound function.
 *
 * @returns
 * A boolean value.
 */
export function NativeBoundFunction(): boolean;
/**
 * @beta
 */
export function NativeBoundFunction_Beta(): boolean;
"
`;

exports[`Hybrid Script and Native Module > Properly generates documentation for modules generated from a hybrid of script and native bindings > npm/types/hybrid-module@1.1.0-beta/package.json 1`] = `
"{
  "name": "hybrid-module",
  "version": "1.1.0-beta",
  "description": "",
  "contributors": [
    {
      "name": "Jake Shirley",
      "email": "jake@xbox.com"
    },
    {
      "name": "Mike Ammerlaan",
      "email": "mikeam@microsoft.com"
    }
  ],
  "license": "MIT"
}"
`;

exports[`Hybrid Script and Native Module > Properly generates documentation for modules generated from a hybrid of script and native bindings > npm/types/hybrid-module-native@1.1.0-internal/README.md 1`] = `
"# \`hybrid-module-native\`

## **NOTE: This version of this module is still in pre-release.  It may change or it may be removed in future releases.**

See full documentation for this module here:

https://learn.microsoft.com/en-us/minecraft/creator/scriptapi/hybrid-module-native/hybrid-module-native"
`;

exports[`Hybrid Script and Native Module > Properly generates documentation for modules generated from a hybrid of script and native bindings > npm/types/hybrid-module-native@1.1.0-internal/index.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @internal
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "hybrid-module-native",
 *   "version": "1.1.0-internal"
 * }
 * \`\`\`
 *
 */
export function NativeBoundFunction(): boolean;
export function NativeBoundFunction_Beta(): string;
export function NativeBoundFunction_InternalOnly(): string;
"
`;

exports[`Hybrid Script and Native Module > Properly generates documentation for modules generated from a hybrid of script and native bindings > npm/types/hybrid-module-native@1.1.0-internal/package.json 1`] = `
"{
  "name": "hybrid-module-native",
  "version": "1.1.0-internal",
  "description": "",
  "contributors": [
    {
      "name": "Jake Shirley",
      "email": "jake@xbox.com"
    },
    {
      "name": "Mike Ammerlaan",
      "email": "mikeam@microsoft.com"
    }
  ],
  "license": "MIT"
}"
`;

exports[`Hybrid Script and Native Module > Properly generates documentation for modules generated from a hybrid of script and native bindings > typescript/hybrid-module@0.1.0.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "hybrid-module",
 *   "version": "0.1.0"
 * }
 * \`\`\`
 *
 */
/**
 * This doc text is extracted from TSDoc comments
 */
export type TypeAliasWithTSDocComments = boolean | string;

/**
 * @remarks
 * A native bound function.
 *
 * @returns
 * A boolean value.
 */
export function NativeBoundFunction(): boolean;
"
`;

exports[`Hybrid Script and Native Module > Properly generates documentation for modules generated from a hybrid of script and native bindings > typescript/hybrid-module@1.0.0.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "hybrid-module",
 *   "version": "1.0.0"
 * }
 * \`\`\`
 *
 */
/**
 * A script generated enum
 */
export declare enum ScriptGeneratedEnum {
    First = 'first',
    Second = 'second',
}

/**
 * This overwrites the TSDoc from TypeAliasWithInfoJsonComments
 * with an info.json file's description
 */
export type TypeAliasWithInfoJsonComments = {
    id: string;
};

/**
 * This doc text is extracted from TSDoc comments
 */
export type TypeAliasWithTSDocComments = boolean | string;

/**
 * A script generated class
 */
export declare class ScriptGeneratedClass {
    /**
     * @remarks
     * A script generated property
     *
     * This property can't be used in read-only mode.
     *
     */
    testProperty: string | undefined;
    /**
     * @remarks
     * A script generated function with doc text defined in TSDoc
     * comments
     *
     * This function can't be called in read-only mode.
     *
     * @param tsdocParam
     * Param comment from TSDoc
     * @param msdocParam
     * This overwrites the TSDoc for msdocParam with an info.json
     * file's description
     * @returns
     * This is a return comment defined in info.json
     * @throws
     * Throws comment in TSDocs
     */
    testFunctionWithTSDocComments(tsdocParam: number, msdocParam: number): boolean;
}

/**
 * @remarks
 * A native bound function.
 *
 * @returns
 * A boolean value.
 */
export function NativeBoundFunction(): boolean;
"
`;

exports[`Hybrid Script and Native Module > Properly generates documentation for modules generated from a hybrid of script and native bindings > typescript/hybrid-module@1.1.0-beta.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @beta
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "hybrid-module",
 *   "version": "1.1.0-beta"
 * }
 * \`\`\`
 *
 */
/**
 * A script generated enum
 */
export declare enum ScriptGeneratedEnum {
    /**
     * @beta
     */
    BetaOnly = 'betaOnly',
    First = 'first',
    Second = 'second',
}

/**
 * This overwrites the TSDoc from TypeAliasWithInfoJsonComments
 * with an info.json file's description
 */
export type TypeAliasWithInfoJsonComments = {
    id: string;
};

/**
 * This doc text is extracted from TSDoc comments
 */
export type TypeAliasWithTSDocComments = boolean | string;

/**
 * A script generated class
 */
export declare class ScriptGeneratedClass {
    /**
     * @remarks
     * A script generated property
     *
     * This property can't be used in read-only mode.
     *
     */
    testProperty: string | undefined;
    /**
     * @remarks
     * A script generated function with doc text defined in TSDoc
     * comments
     *
     * This function can't be called in read-only mode.
     *
     * @param tsdocParam
     * Param comment from TSDoc
     * @param msdocParam
     * This overwrites the TSDoc for msdocParam with an info.json
     * file's description
     * @returns
     * This is a return comment defined in info.json
     * @throws
     * Throws comment in TSDocs
     */
    testFunctionWithTSDocComments(tsdocParam: number, msdocParam: number): boolean;
}

/**
 * @remarks
 * A native bound function.
 *
 * @returns
 * A boolean value.
 */
export function NativeBoundFunction(): boolean;
/**
 * @beta
 */
export function NativeBoundFunction_Beta(): boolean;
"
`;

exports[`Hybrid Script and Native Module > Properly generates documentation for modules generated from a hybrid of script and native bindings > typescript/hybrid-module-native@1.1.0-internal.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @internal
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "hybrid-module-native",
 *   "version": "1.1.0-internal"
 * }
 * \`\`\`
 *
 */
export function NativeBoundFunction(): boolean;
export function NativeBoundFunction_Beta(): string;
export function NativeBoundFunction_InternalOnly(): string;
"
`;
